--- a/.github/workflows/release-app.yaml
+++ b/.github/workflows/release-app.yaml
@@ -40,7 +40,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4.1.1
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ github.repository_owner }}//${{ env.IMAGE_NAME }}
           tags: |
             type=semver,pattern={{raw}},value=${{ github.event.inputs.tag }}
 
