Added GitHub Actions Workflows

--- a/.github/workflows/release-app.yaml
+++ b/.github/workflows/release-app.yaml
@@ -1,13 +1,7 @@
-name: Container Apps Hello World Build
+name: (Optional) Build "Hello World" Container App
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-    paths:
-      - 'app/**'
-      - '.github/workflows/release-app.yaml'
 
 env:
   REGISTRY: ghcr.io
